# calliope-nrf24

./: Cargo.toml  Embed.toml  README.md  links
.cargo/: config
doc/: calliope_radio.c  calliope_radio.hex
src/: lib.rs
